add: fixed-menu

--- a/src/components/app/app.sass
+++ b/src/components/app/app.sass
@@ -1,5 +1,18 @@
 .app
 	margin: 0 auto
 	max-width: 1000px
-	padding: 0 30px
+	padding: 0 30px 200px 30px
+
+.fixed-menu
+	position: fixed
+	top: 0
+	left: 0
+	right: 0
+	margin: 0 auto
+	height: 10px
+	width: 1000px
+	padding: 30px 30px 130px 30px
+	background-color: #151f2b
+	z-index: 99
+
 	// background-color: $dark
